Reworked API/Impl, added lambda support